fixed scrollbar annoyances

--- a/pages/main.css
+++ b/pages/main.css
@@ -6,6 +6,10 @@
 	--max-content-width: 50em;
 }
 
+html {
+	overflow-y: scroll;
+}
+
 body {
 	font-family: Helvetica;
 	/*font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Microsoft YaHei Light", sans-serif;*/
